--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Aca Deca Speech Timer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
